--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "import": "./dist/index.js"
     },
     "./config": {
+      "types": "./dist/config.d.ts",
       "import": "./dist/config.js"
     }
   },
@@ -52,10 +53,11 @@
     "vitest": "^0.22.1"
   },
   "dependencies": {
-    "typescript": "^4.8.2",
     "bundle-require": "^3.1.0",
     "commander": "^9.4.0",
     "esbuild": "^0.15.7",
-    "joycon": "^3.1.1"
+    "globby": "^13.1.2",
+    "joycon": "^3.1.1",
+    "typescript": "^4.8.2"
   }
 }
