--- a/package.json
+++ b/package.json
@@ -17,6 +17,17 @@
     "./config": {
       "types": "./dist/config.d.ts",
       "import": "./dist/config.js"
+    },
+    "./plugin": {
+      "types": "./dist/esbuild-plugin.d.ts",
+      "import": "./dist/esbuild-plugin.js"
+    }
+  },
+  "typesVersions": {
+    "*": {
+      "*": [
+        "dist/*"
+      ]
     }
   },
   "files": [
