--- a/package.json
+++ b/package.json
@@ -56,8 +56,9 @@
   "devDependencies": {
     "@luxass/eslint-config": "^1.0.7",
     "@luxass/prettier-config": "^1.0.4",
-    "@types/node": "^18.7.13",
-    "eslint": "^8.23.0",
+    "@types/node": "^18.7.18",
+    "colorette": "^2.0.19",
+    "eslint": "^8.23.1",
     "prettier": "^2.7.1",
     "strip-json-comments": "^5.0.0",
     "tsup": "^6.2.3",
@@ -66,9 +67,9 @@
   "dependencies": {
     "bundle-require": "^3.1.0",
     "commander": "^9.4.0",
-    "esbuild": "^0.15.7",
+    "esbuild": "^0.15.8",
     "globby": "^13.1.2",
     "joycon": "^3.1.1",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.3"
   }
 }
