some changes - still need some work

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "esModuleInterop": true,
     "strict": true,
     "declaration": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "useUnknownInCatchVariables": false,
     "resolveJsonModule": true,
     "preserveSymlinks": true,
