--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   },
   "typesVersions": {
     "*": {
-      "*": [
-        "dist/*"
+      "config": [
+        "dist/config.d.ts"
+      ],
+      "plugin": [
+        "dist/esbuild-plugin.d.ts"
       ]
     }
   },
