--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "prettier": "^2.7.1",
     "strip-json-comments": "^5.0.0",
     "tsup": "^6.2.3",
+    "typescript": "^4.8.4",
     "vitest": "^0.22.1"
   },
   "dependencies": {
@@ -72,7 +73,9 @@
     "commander": "^9.4.1",
     "esbuild": "^0.15.10",
     "globby": "^13.1.2",
-    "joycon": "^3.1.1",
+    "joycon": "^3.1.1"
+  },
+  "peerDependencies": {
     "typescript": "^4.8.4"
   }
 }
