--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,38 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
 node_modules
-dist
-.eslintcache
+
+# testing
+coverage
+
 .out
+out/
+dist/
+.output
+dist/
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+.pnpm-debug.log*
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env
+.env.production
+
+# turbo
+.turbo
+
+
+
+
+
+
+
