added lint script

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -19,7 +19,8 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "test": "vitest"
+    "test": "vitest",
+    "lint": "eslint --cache {src,tests}/**/*.ts"
   },
   "repository": {
     "type": "git",
