--- a/packages/typeschema/package.json
+++ b/packages/typeschema/package.json
@@ -25,7 +25,8 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "test": "vitest"
+    "test": "vitest",
+    "lint": "eslint --cache {src,tests}/**/*.ts"
   },
   "repository": {
     "type": "git",
