--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@typeschema/docs",
-  "type": "module",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -11,10 +11,20 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@algolia/client-search": "^4.14.2",
     "@astrojs/mdx": "^0.12.1",
+    "@astrojs/preact": "^1.2.0",
+    "@astrojs/react": "^1.2.2",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.1.3",
+    "@docsearch/css": "^3.3.0",
+    "@docsearch/react": "^3.3.0",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "astro": "^1.6.14",
+    "preact": "^10.6.5",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "tailwindcss": "^3.0.24"
   }
 }
