--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "typeschema-monorepo",
   "private": true,
+  "packageManager": "pnpm@7.18.0",
+  "license": "MIT",
+  "engines": {
+    "node": ">=16"
+  },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "build": "turbo run build",
@@ -13,17 +18,12 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@luxass/eslint-config": "^2.0.0",
+    "@luxass/eslint-config": "^2.1.1",
     "@types/node": "^18.11.13",
     "eslint": "^8.29.0",
     "tsup": "^6.5.0",
     "turbo": "^1.6.3",
     "typescript": "^4.9.4",
     "vitest": "^0.25.7"
-  },
-  "license": "MIT",
-  "engines": {
-    "node": ">=16"
-  },
-  "packageManager": "pnpm@7.18.0"
+  }
 }
