--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^1.6.14",
+    "clsx": "^1.2.1",
     "preact": "^10.6.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
