--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -36,5 +36,9 @@
     "dev": "tsup --watch",
     "test": "vitest --run",
     "lint": "eslint --cache {src,tests}/**/*.ts"
+  },
+  "dependencies": {
+    "esbuild": "^0.16.4",
+    "joycon": "^3.1.1"
   }
 }
