--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -38,7 +38,9 @@
     "lint": "eslint --cache {src,tests}/**/*.ts"
   },
   "dependencies": {
+    "bundle-require": "^3.1.2",
     "esbuild": "^0.16.4",
-    "joycon": "^3.1.1"
+    "joycon": "^3.1.1",
+    "jsonc-parse": "^1.0.2"
   }
 }
