--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -4,8 +4,5 @@
     "rootDir": "./src",
     "outDir": "./dist"
   },
-  "include": ["src/**/*"],
-  "references": [
-    { "path": "../types" }
-  ]
+  "include": ["src/**/*"]
 }
