--- a/packages/typeschema/tsconfig.json
+++ b/packages/typeschema/tsconfig.json
@@ -4,5 +4,16 @@
     "rootDir": "./src",
     "outDir": "./dist"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "references": [
+    {
+      "path": "../utils"
+    },
+    {
+      "path": "../helpers"
+    },
+    {
+      "path": "../types"
+    }
+  ]
 }
