--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -21,9 +21,9 @@
   },
   "exports": {
     ".": {
-      "types": "./dist/types.d.ts",
-      "require": "./dist/types.d.ts",
-      "import": "./dist/types.d.ts"
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.d.ts",
+      "import": "./dist/index.d.ts"
     }
   },
   "main": "./dist/index.d.ts",
@@ -35,6 +35,6 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "lint": "eslint --cache {src,tests}/**/*.ts"
+    "lint": "eslint --cache src/**/*.ts"
   }
 }
