--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -2,30 +2,22 @@
   "name": "@typeschema/docs",
   "version": "0.0.1",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@algolia/client-search": "^4.14.2",
-    "@astrojs/mdx": "^0.12.1",
-    "@astrojs/preact": "^1.2.0",
-    "@astrojs/react": "^1.2.2",
-    "@astrojs/sitemap": "^1.0.0",
-    "@astrojs/tailwind": "^2.1.3",
-    "@docsearch/css": "^3.3.0",
-    "@docsearch/react": "^3.3.0",
+    "@next/font": "13.1.6",
+    "@types/node": "^18.11.17",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "astro": "^1.6.14",
-    "clsx": "^1.2.1",
-    "preact": "^10.6.5",
+    "eslint-config-next": "13.1.6",
+    "next": "13.1.6",
+    "nextra": "^2.2.14",
+    "nextra-theme-docs": "^2.2.14",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "tailwindcss": "^3.0.24"
+    "react-dom": "^18.0.0"
   }
 }
