--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   },
   "devDependencies": {
     "@luxass/eslint-config": "^2.2.6",
-    "@luxass/prettier-config": "^1.1.4",
+    "@luxass/prettier-config": "^1.1.9",
     "@types/node": "^18.11.17",
+    "@types/prompts": "^2.4.2",
     "eslint": "^8.30.0",
     "prettier": "^2.8.3",
-    "tsup": "^6.5.0",
-    "turbo": "^1.6.3",
-    "typescript": "^4.9.4",
+    "tsup": "^6.6.3",
+    "turbo": "^1.8.1",
+    "typescript": "^4.9.5",
     "vitest": "^0.25.8"
   }
 }
