--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@luxass/eslint-config-react": "^3.0.1",
     "@next/font": "13.1.6",
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.21",
