--- a/packages/typeschema/package.json
+++ b/packages/typeschema/package.json
@@ -56,6 +56,8 @@
     "chalk": "^5.2.0",
     "debug": "^4.3.4",
     "esbuild": "^0.16.17",
+    "globby": "^13.1.3",
+    "hookable": "^5.5.1",
     "jsonc-parse": "^1.0.2",
     "tsconf-utils": "^1.1.0"
   },
