--- a/packages/typeschema/package.json
+++ b/packages/typeschema/package.json
@@ -52,6 +52,7 @@
     "@luxass/find-config": "^0.1.0",
     "@luxass/load-config": "^0.1.0",
     "@luxass/neoman": "^0.2.0",
+    "@swc/core": "^1.3.39",
     "cac": "^6.7.14",
     "chalk": "^5.2.0",
     "debug": "^4.3.4",
