--- a/packages/typeschema/package.json
+++ b/packages/typeschema/package.json
@@ -49,20 +49,22 @@
     "lint": "eslint --cache {src,tests}/**/*.ts"
   },
   "dependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/parser": "^7.21.4",
+    "@babel/types": "^7.21.4",
     "@luxass/find-config": "^0.1.0",
     "@luxass/load-config": "^0.1.0",
     "@luxass/neoman": "^0.2.0",
-    "@swc/core": "^1.3.39",
     "cac": "^6.7.14",
     "chalk": "^5.2.0",
     "debug": "^4.3.4",
     "esbuild": "^0.16.17",
     "globby": "^13.1.3",
-    "hookable": "^5.5.1",
     "jsonc-parse": "^1.0.2",
     "tsconf-utils": "^1.1.0"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.20.0",
     "prompts": "^2.4.2"
   }
 }
